--- a/mc2app/package.json
+++ b/mc2app/package.json
@@ -9,6 +9,11 @@
   },
   "dependencies": {
     "@googlemaps/react-wrapper": "^1.1.31",
+    "@types/gapi": "^0.0.41",
+    "axios": "^0.27.2",
+    "formidable": "^2.0.1",
+    "googleapis": "^39.2.0",
+    "mongodb": "^4.6.0",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -16,6 +21,7 @@
     "sass": "^1.49.9"
   },
   "devDependencies": {
+    "@types/formidable": "^2.0.5",
     "@types/node": "16.11.10",
     "@types/react": "17.0.37",
     "eslint": "7",
