--- a/mc2app/package.json
+++ b/mc2app/package.json
@@ -18,7 +18,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-youtube": "^7.14.0",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "sharp": "^0.30.7"
   },
   "devDependencies": {
     "@types/formidable": "^2.0.5",
